<resources>
    <string name="app_name">XMLNoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="note_timestamp">Timestamp</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="missing">*Missing fields</string>
    <string name="delete">Delete</string>
    <string name="dialog_alert_title">Warning</string>
    <string name="delete_question">Are you sure you want to delete this note?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>