<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".fragments.AddNoteFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_content_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/note_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minHeight="200dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/missing"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/note_content_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/status" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/save_button"
            app:layout_constraintLeft_toRightOf="@id/save_button"
            app:layout_constraintRight_toLeftOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="@id/save_button" />

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button"
            app:layout_constraintLeft_toRightOf="@id/cancel_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>